# literate-octo-carnival

./: README.md  pyproject.toml
examples/: benchmark_results_20250105_111452.json  benchmark_results_20250105_111518.json  benchmark_results_20250105_111533.json  benchmark_results_20250105_111748.json  benchmark_results_20250105_112052.json  benchmark_results_20250105_112157.json  benchmark_results_20250105_112203.json  benchmark_results_20250105_112207.json  benchmark_results_20250105_112357.json  benchmark_results_20250105_112729.json  benchmark_results_20250105_122821.json  benchmark_results_20250105_123659.json  my_results.json
examples/profiling_results/: go_impl_profile_stats.prof  go_impl_profile_stats.txt  python_impl_profile_stats.prof  python_impl_profile_stats.txt  typescript_impl_profile_stats.prof  typescript_impl_profile_stats.txt
neural_net_comparisons/architectures/: autoencoder.py  mlp.py  residual.py
neural_net_comparisons/benchmark/: profiler.py  runner.py
neural_net_comparisons/implementations/: activations.py  go_impl.go  matrix.py  python_impl.py  typescript_impl.js  typescript_impl.ts
neural_net_comparisons/test_generators/: __init__.py  complex_test.py
profiling_results/: go_impl_profile_stats.prof  go_impl_profile_stats.txt  python_impl_profile_stats.prof  python_impl_profile_stats.txt  typescript_impl_profile_stats.prof  typescript_impl_profile_stats.txt
