[tool.poetry]
name = "neural-net-comparisons"
version = "0.1.0"
description = "Compare neural network implementations across Python, Go, and TypeScript"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "neural_net_comparisons"}]

[tool.poetry.dependencies]
python = "3.13"  
matplotlib = "^3.7.0"  
numpy = "^2.2.1" 
psutil="^1.0.0"
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
benchmark = "neural_net_comparisons.benchmark.runner:main"

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true